Fix: theme alignement continue: fix customizer ratings PR https://github.com/presscustomizr/customizr/pull/578 + Nikeo's fix: https://github.com/presscustomizr/customizr/commit/3b9232ec7447e616a77c43d5b5703e500de0548e

--- a/assets/back/css/theme-customizer-control.css
+++ b/assets/back/css/theme-customizer-control.css
@@ -20,6 +20,11 @@
 .accordion-sub-container.control-panel-content {
   left: 440px;
 }
+.in-sub-panel #tc-donate-customizer,
+.in-sub-panel .tc-cta-wrap {
+  left: -450px;
+  height: 0;
+}
 
 /* RTL*/
 .rtl.wp-customizer .wp-full-overlay.expanded {
@@ -44,7 +49,10 @@
 .rtl .accordion-sub-container.control-panel-content {
   right: 440px;
 }
-
+.rtl .in-sub-panel #tc-donate-customizer,
+.rtl .in-sub-panel .tc-cta-wrap {
+  right: -450px;
+}
 
 @media screen and (max-width: 1400px) {
   .wp-customizer .wp-full-overlay.expanded {
@@ -99,6 +107,34 @@
     right: -380px;
   }
 }
+/* Reponsive buttons + rating footer actions hack 
+* What we do is:
+* a) stretch heigh and width of the footer-actions
+* b) sett an higher bottom vallue for the wp-full-overlay-sidebar-content
+* according with the new footer-actions-height
+* ( the devices buttons are not visibile for window's width below 1025px
+*/
+@media screen and (min-width: 980px) {
+  .wp-customizer .expanded #customize-footer-actions {
+    width: 380px;
+  }
+}
+@media screen and (min-width: 1025px) {
+  .wp-customizer .expanded #customize-footer-actions {
+    height: 85px;
+    background: inherit;
+  }
+  .wp-customizer #customize-controls .wp-full-overlay-sidebar-content {
+    bottom: 85px;
+  }
+}
+@media screen and (min-width: 1401px) {
+  .wp-customizer .expanded #customize-footer-actions {
+    width: 440px;
+  }
+}
+/* end hack */
+
 @media screen and (max-width: 979px) {
   .wp-customizer .wp-full-overlay.expanded {
     margin-left: 300px;
@@ -154,6 +190,48 @@
   }
 }
 
+/* at max-width 640px the wp-full-overlay-sidebar becomes 100% */
+@media screen and (max-width: 640px) {
+  .wp-customizer .wp-full-overlay.expanded {
+    margin-left: 0;
+  }
+
+  .in-sub-panel #customize-info,
+  .in-sub-panel #customize-theme-controls > ul > .accordion-section {
+    left: -100%;
+    width: 100%;
+  }
+
+  .in-sub-panel .tc-cta-wrap,
+  .in-sub-panel #tc-donate-customizer,
+  #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
+    left: -100%;
+  }
+  .accordion-sub-container.control-panel-content {
+    left: 100%;
+  }
+
+  /* RTL */
+  .rtl.wp-customizer .wp-full-overlay.expanded {
+    margin-right: 0;
+  }
+  
+  .rtl .in-sub-panel #customize-info,
+  .rtl .in-sub-panel #customize-theme-controls > ul > .accordion-section {
+    right: -100%;
+    width: 100%;
+    left: auto;
+  }
+  .rtl .in-sub-panel #tc-donate-customizer,
+  .rtl .in-sub-panel .tc-cta-wrap,
+  .rtl #customize-theme-controls .control-section.current-panel > h3.accordion-section-title {
+    right: -100%;
+    left: auto;
+  }
+  .rtl .accordion-sub-container.control-panel-content {
+    right: 100%;
+  }
+}
 
 /* PANELS AND SECTIONS TITLES */
 .wp-customizer #customize-theme-controls .accordion-section-title {
@@ -1018,14 +1096,7 @@ body .select2-results {
   -webkit-box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.3);
   box-shadow: inset 0 2px 6px rgba(0, 0, 0, 0.3);
 }
-.in-sub-panel #tc-donate-customizer,
-.in-sub-panel .tc-cta-wrap {
-  left: -450px;
-}
-.rtl .in-sub-panel #tc-donate-customizer,
-.rtl .in-sub-panel .tc-cta-wrap {
-  right: -450px;
-}
+
 .tc-grid-control-section {
   width: 100%;
   float: left;
@@ -1118,13 +1189,20 @@ body .select2-results {
 .tc-rate-link {
   position: absolute;
   bottom: 0;
-  right: 0;
-  padding: 4px 12px;
+  left: 40px;
+  padding: 4px 12px 4px 0;
   font-size: 10px;
   line-height: 14px;
-  width: 90%;
   text-align: right;
+  right: 0;
 }
+.rtl .tc-rate-link {
+  text-align: left;
+  left: auto;
+  right: 40px;
+  padding: 4px 0 4px 12px;
+}
+
 .wp-full-overlay.collapsed .tc-rate-link {
   display: none;
 }
